# formseal-inbox

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  question.yml
.github/workflows/: inject-version.yml  prepare-release.yml  publish.yml
fsi/: cmd.py  fsi.py
fsi/commands/config/: __init__.py  config.py
fsi/commands/connect/: __init__.py  connect.py
fsi/commands/decrypt/: __init__.py  decrypt.py
fsi/commands/general/: about.py  help.py  version.py
fsi/general/: aliases.py  errors.py
fsi/security/: keys.py
fsi/ui/: __init__.py  bodies.py  headers.py  styles.py
